--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "chai": "^2.0.0",
     "chai-http": "^1.0.0",
-    "grunt-contrib-jscs": "^0.1.8",
+    "fs-extra": "^0.16.3",
     "grunt": "^0.4.5",
+    "grunt-contrib-jscs": "^0.1.8",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-simple-mocha": "^0.4.0",
